--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <title>Document</title>
 </head>
 <body>
+
+  <header>
+    <div class="logo">
+      <img src="logo.png" alt="Logo">
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   
 </body>
 </html>
