--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />   
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <a href="#" class="logo">Kenai</a>
+      <div class="bx bx-menu" id="menu-icon"></div>
 
-  <header>
-    <div class="logo">
-      <img src="logo.png" alt="Logo">
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
+      
+      <ul class="navbar">
+        <i class="bx bx-search"></i> 
+        <li><a href="#home">início</a></li>
+        <li><a href="#mylist">minha lista</a></li>
+        <i class="bx bx-bell"></i> 
+        <i class="bx bx-user"></i> 
       </ul>
-    </nav>
-  </header>
-  
-</body>
+    </header>
+
+
+
+    <script type="text/javascript" src="js/jscript.js"></script>
+
+  </body>
 </html>
