--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
@@ -16,19 +16,46 @@
       <a href="#" class="logo">Kenai</a>
       <div class="bx bx-menu" id="menu-icon"></div>
 
-      
       <ul class="navbar">
-        <i class="bx bx-search"></i> 
+        <i class="bx bx-search"></i>
         <li><a href="#home">início</a></li>
         <li><a href="#mylist">minha lista</a></li>
-        <i class="bx bx-bell"></i> 
-        <i class="bx bx-user"></i> 
+        <i class="bx bx-bell"></i>
+        <i class="bx bx-user"></i>
       </ul>
     </header>
 
+    <section class="home" id="home">
+      <div class="home-text">
+        <h4>Ação/Aventura</h4>
+        <br />
+        <div class="frame">
+          <div class="info">
+            <div class="rating">
+              <img src="/img/Star.svg" alt="" srcset="" />
+              <img src="/img/Star.svg" alt="" srcset="" />
+              <img src="/img/Star.svg" alt="" srcset="" />
+              <img src="/img/Star.svg" alt="" srcset="" />
+              <img src="/img/Star.svg" alt="" srcset="" />
+            </div>
+            <div class="duration">
+              <i class="bx bx-time" id="time-icon"></i>
+              <h2>1h 57m</h2>
+            </div>
+          </div>
+          <h1>Batman</h1>
+          <h3>
+            Gotham City enfrenta uma nova ameaça, e Bruce Wayne assume o papel
+            do Cavaleiro das Trevas para deter uma organização criminosa. Em
+            meio a seus próprios demônios internos, Wayne luta para salvar a
+            cidade da iminente escuridão eterna.
+          </h3>
 
+          <button type="button" class="btn">Assitir agora</button>
+        </div>
+      </div>
+    </section>
 
     <script type="text/javascript" src="js/jscript.js"></script>
-
   </body>
 </html>
