--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="background">   
     <header>
       <a href="#" class="logo">Kenai</a>
       <div class="bx bx-menu" id="menu-icon"></div>
@@ -57,5 +58,6 @@
     </section>
 
     <script type="text/javascript" src="js/jscript.js"></script>
+    </div>
   </body>
 </html>
