--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <i class="bx bx-bell"></i>
         <i class="bx bx-user"></i>
       </ul>
+      
     </header>
 
     <section class="home" id="home">
@@ -56,6 +57,8 @@
         </div>
       </div>
     </section>
+
+    <iframe width="450" height="200" src="https://www.youtube.com/embed/neY2xVmOfUM?si=GB9FORNhFv1Ugy6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <script type="text/javascript" src="js/jscript.js"></script>
     </div>
