--- a/index.html
+++ b/index.html
@@ -1,66 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
-    />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="background">   
-    <header>
-      <a href="#" class="logo">Kenai</a>
-      <div class="bx bx-menu" id="menu-icon"></div>
 
-      <ul class="navbar">
-        <i class="bx bx-search"></i>
-        <li><a href="#home">início</a></li>
-        <li><a href="#mylist">minha lista</a></li>
-        <i class="bx bx-bell"></i>
-        <i class="bx bx-user"></i>
-      </ul>
-      
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css" />
+  <link rel="stylesheet" href="reset.css" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Document</title>
+</head>
 
-    <section class="home" id="home">
+<body>
+  <header>
+    <a href="#" class="logo">Kenai</a>
+    <div class="bx bx-menu" id="menu-icon"></div>
+
+    <ul class="navbar">
+      <i class="bx bx-search"></i>
+      <li><a href="#home">início</a></li>
+      <li><a href="#mylist">minha lista</a></li>
+      <i class="bx bx-bell"></i>
+      <i class="bx bx-user"></i>
+    </ul>
+
+  </header>
+
+  <section class="home" id="home">
+    <div class="home-container">
       <div class="home-text">
         <h4>Ação/Aventura</h4>
-        <br />
-        <div class="frame">
-          <div class="info">
-            <div class="rating">
-              <img src="/img/Star.svg" alt="" srcset="" />
-              <img src="/img/Star.svg" alt="" srcset="" />
-              <img src="/img/Star.svg" alt="" srcset="" />
-              <img src="/img/Star.svg" alt="" srcset="" />
-              <img src="/img/Star.svg" alt="" srcset="" />
-            </div>
-            <div class="duration">
-              <i class="bx bx-time" id="time-icon"></i>
-              <h2>1h 57m</h2>
-            </div>
+        <div class="info">
+          <div class="rating">
+            <img src="/img/Star.svg" alt="" srcset="" />
+            <img src="/img/Star.svg" alt="" srcset="" />
+            <img src="/img/Star.svg" alt="" srcset="" />
+            <img src="/img/Star.svg" alt="" srcset="" />
+            <img src="/img/Star.svg" alt="" srcset="" />
           </div>
-          <h1>Batman</h1>
-          <h3>
-            Gotham City enfrenta uma nova ameaça, e Bruce Wayne assume o papel
-            do Cavaleiro das Trevas para deter uma organização criminosa. Em
-            meio a seus próprios demônios internos, Wayne luta para salvar a
-            cidade da iminente escuridão eterna.
-          </h3>
+          <div class="duration">
+            <i class="bx bx-time" id="time-icon"></i>
+            <h2>1h 57m</h2>
+          </div>
+        </div>
+        <h1>Batman</h1>
+        <p>
+          Gotham City enfrenta uma nova ameaça, e Bruce Wayne assume o papel
+          do Cavaleiro das Trevas para deter uma organização criminosa. Em
+          meio a seus próprios demônios internos, Wayne luta para salvar a
+          cidade da iminente escuridão eterna.
+        </p>
+        <button class="btn" type="button" class="btn">Assitir agora</button>
+      </div>
 
-          <button type="button" class="btn">Assitir agora</button>
+
+      <div class="home-content">
+
+        <div class="row">
+          <img src="/img/image-1.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+            </div>
+            <h2>Shang-Chi</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="/img/image-2.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+            </div>
+            <h2>Wish Dragon</h2>
+          </div>
+
+        </div>
+
+        <div class="row">
+          <img src="/img/image-3.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+            </div>
+            <h2>Loki</h2>
+          </div>
+
+        </div>
+
+        <div class="row">
+          <img src="/img/image-4.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+            </div>
+            <h2>Spider-Man</h2>
+          </div>
+
+        </div>
+
+        <div class="row">
+          <img src="/img/image-5.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+              <img src="/img/Star.svg" alt="star" width="12" />
+            </div>
+            <h2>The Witcher</h2>
+          </div>
         </div>
       </div>
-    </section>
 
-    <iframe width="450" height="200" src="https://www.youtube.com/embed/neY2xVmOfUM?si=GB9FORNhFv1Ugy6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-    <script type="text/javascript" src="js/jscript.js"></script>
     </div>
-  </body>
+  </section>
+
+
+
+  <script type="text/javascript" src="js/jscript.js"></script>
+</body>
+
 </html>
