--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <i class="bx bx-bell"></i>
       <i class="bx bx-user"></i>
     </ul>
-
   </header>
 
   <section class="home" id="home">
@@ -49,97 +48,93 @@
           meio a seus próprios demônios internos, Wayne luta para salvar a
           cidade da iminente escuridão eterna.
         </p>
-        <button class="btn" type="button" class="btn">Assitir agora</button>
+        <button class="btn" type="button">Assistir agora</button>
       </div>
-
 
       <div class="home-content">
-
-        <div class="row">
-          <img src="/img/image-1.png" alt="">
-          <div class="row-text">
-            <h4>Ação/Aventura</h4>
-            <div class="rating">
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
+        <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+        <button class="next" onclick="moveSlide(1)">&#10095;</button>
+        <div class="carrossel-container">
+          <div class="row">
+            <img src="/img/image-1.png" alt="">
+            <div class="row-text">
+              <h4>Ação/Aventura</h4>
+              <div class="rating">
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+              </div>
+              <h2>Shang-Chi</h2>
             </div>
-            <h2>Shang-Chi</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <img src="/img/image-2.png" alt="">
-          <div class="row-text">
-            <h4>Ação/Aventura</h4>
-            <div class="rating">
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-            </div>
-            <h2>Wish Dragon</h2>
           </div>
 
-        </div>
-
-        <div class="row">
-          <img src="/img/image-3.png" alt="">
-          <div class="row-text">
-            <h4>Ação/Aventura</h4>
-            <div class="rating">
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
+          <div class="row">
+            <img src="/img/image-2.png" alt="">
+            <div class="row-text">
+              <h4>Ação/Aventura</h4>
+              <div class="rating">
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+              </div>
+              <h2>Wish Dragon</h2>
             </div>
-            <h2>Loki</h2>
           </div>
 
-        </div>
-
-        <div class="row">
-          <img src="/img/image-4.png" alt="">
-          <div class="row-text">
-            <h4>Ação/Aventura</h4>
-            <div class="rating">
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
+          <div class="row">
+            <img src="/img/image-3.png" alt="">
+            <div class="row-text">
+              <h4>Ação/Aventura</h4>
+              <div class="rating">
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+              </div>
+              <h2>Loki</h2>
             </div>
-            <h2>Spider-Man</h2>
           </div>
 
-        </div>
-
-        <div class="row">
-          <img src="/img/image-5.png" alt="">
-          <div class="row-text">
-            <h4>Ação/Aventura</h4>
-            <div class="rating">
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
-              <img src="/img/Star.svg" alt="star" width="12" />
+          <div class="row">
+            <img src="/img/image-4.png" alt="">
+            <div class="row-text">
+              <h4>Ação/Aventura</h4>
+              <div class="rating">
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+              </div>
+              <h2>Spider-Man</h2>
             </div>
-            <h2>The Witcher</h2>
           </div>
+
+          <div class="row">
+            <img src="/img/image-5.png" alt="">
+            <div class="row-text">
+              <h4>Ação/Aventura</h4>
+              <div class="rating">
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+                <img src="/img/Star.svg" alt="star" width="12" />
+              </div>
+              <h2>The Witcher</h2>
+            </div>
+          </div>          
+
         </div>
       </div>
-
     </div>
   </section>
 
-
-
-  <script type="text/javascript" src="js/jscript.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </body>
-
 </html>
