--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
         <h4>Ação/Aventura</h4>
         <div class="info">
           <div class="rating">
-            <img src="/img/Star.svg" alt="star" width="12" />
-            <img src="/img/Star.svg" alt="star" width="12" />
-            <img src="/img/Star.svg" alt="star" width="12" />
-            <img src="/img/Star.svg" alt="star" width="12" />
-            <img src="/img/Star.svg" alt="star" width="12" />
+            <a href="#" class="star">
+              <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+            <a href="#" class="star">
+              <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+            <a href="#" class="star">
+              <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+            <a href="#" class="star">
+              <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+            <a href="#" class="star">
+              <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
           </div>
           <div class="duration">
             <i class="bx bx-time" id="time-icon"></i>
@@ -51,83 +56,105 @@
         <button class="btn" type="button">Assistir agora</button>
       </div>
 
-      <div class="home-content">       
-        <div class="carrossel-container">
-          <div class="row">
-            <img src="/img/image-1.png" alt="">
-            <div class="row-text">
-              <h4>Ação/Aventura</h4>
-              <div class="rating">
-                <img src="/img/Star.svg" alt="star" width="15" />
-                <img src="/img/Star.svg" alt="star" width="15" />
-                <img src="/img/Star.svg" alt="star" width="15" />
-                <img src="/img/Star.svg" alt="star" width="15" />
-                <img src="/img/Star.svg" alt="star" width="15" />
-              </div>
+      <div class="home-content">
+        <div class="row">
+          <img src="/img/image-1.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
               <h2>Shang-Chi</h2>
             </div>
           </div>
+        </div>
 
-          <div class="row">
-            <img src="/img/image-2.png" alt="">
-            <div class="row-text">
-              <h4>Ação/Aventura</h4>
-              <div class="rating">
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-              </div>
-              <h2>Wish Dragon</h2>
+        <div class="row">
+          <img src="/img/image-2.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
             </div>
+            <h2>Wish Dragon</h2>
           </div>
+        </div>
 
-          <div class="row">
-            <img src="/img/image-3.png" alt="">
-            <div class="row-text">
-              <h4>Ação/Aventura</h4>
-              <div class="rating">
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-              </div>
-              <h2>Loki</h2>
+        <div class="row">
+          <img src="/img/image-3.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
             </div>
+            <h2>Loki</h2>
           </div>
+        </div>
 
-          <div class="row">
-            <img src="/img/image-4.png" alt="">
-            <div class="row-text">
-              <h4>Ação/Aventura</h4>
-              <div class="rating">
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-              </div>
-              <h2>Spider-Man</h2>
+        <div class="row">
+          <img src="/img/image-4.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
             </div>
+            <h2>Spider-Man</h2>
           </div>
+        </div>
 
-          <div class="row">
-            <img src="/img/image-5.png" alt="">
-            <div class="row-text">
-              <h4>Ação/Aventura</h4>
-              <div class="rating">
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-                <img src="/img/Star.svg" alt="star" width="12" />
-              </div>
-              <h2>The Witcher</h2>
+        <div class="row">
+          <img src="/img/image-5.png" alt="">
+          <div class="row-text">
+            <h4>Ação/Aventura</h4>
+            <div class="rating">
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
+              <a href="#" class="star">
+                <img src="https://www.iconpacks.net/icons/2/free-star-icon-2768-thumb.png" alt="star icon"></a>
             </div>
-          </div>          
-
+            <h2>The Witcher</h2>
+          </div>
         </div>
       </div>
     </div>
@@ -135,4 +162,5 @@
 
   <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
