--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
   <header>
     <a href="#" class="logo">Kenai</a>
     <div class="bx bx-menu" id="menu-icon"></div>
-
     <ul class="navbar">
-      <i class="bx bx-search"></i>
+      <li><i class="bx bx-search"></i></li>
       <li><a href="#home">início</a></li>
       <li><a href="#mylist">minha lista</a></li>
-      <i class="bx bx-bell"></i>
-      <i class="bx bx-user"></i>
+      <li><i class="bx bx-bell"></i></li>
+      <li><i class="bx bx-user"></i></li>
     </ul>
   </header>
 
@@ -55,7 +54,6 @@
         </p>
         <button class="btn" type="button">Assistir agora</button>
       </div>
-
       <div class="home-content">
         <div class="row">
           <img src="/img/image-1.png" alt="">
