--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 
 <body>
   <header>
-    <a href="#" class="logo">Kenai</a>
-    <div class="bx bx-menu" id="menu-icon"></div>
-    <ul class="navbar">
-      <li><i class="bx bx-search"></i></li>
-      <li><a href="#home">início</a></li>
-      <li><a href="#mylist">minha lista</a></li>
-      <li><i class="bx bx-bell"></i></li>
-      <li><i class="bx bx-user"></i></li>
+    <nav>
+    <a class="logo" href="/index.html">Kenai</a>
+    <div class="mobile-menu">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
+    <ul class="nav-list">
+      <li><a href="">buscar</a></li>
+      <li><a href="">início</a></li>
+      <li><a href="">minha lista</a></li>
+      <li><a href="">notificações</a></li>
+      <li><a href="" class="f-btn">minha conta</a></li>
     </ul>
+  </nav>   
   </header>
 
   <section class="home" id="home">
